# MythiCaL

./: .clang-format  .cluster1.h.swp  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  Makefile  Makefile1~  Makefile~  Output  Output~  README.md  README.txt  README.txt~  cluster.cpp  cluster.cpp~  cluster.h  cluster.h~  clusterTmp.h  libCluster.cpp  libCluster.cpp~  libCluster.cpp~~  testCluster  testCluster.cpp  testCluster.cpp~
CoarseGrainSites/doc/: DEVELOPERS_GUIDE.md
CoarseGrainSites/include/kmccoarsegrain/: kmc_coarsegrainsystem.hpp  kmc_constants.hpp  kmc_crude.hpp  kmc_queue.hpp  kmc_walker.hpp
CoarseGrainSites/include/mythical/: CMakeLists.txt  coarsegrainsystem.hpp  constants.hpp  queue.hpp  version.hpp.in  walker.hpp
CoarseGrainSites/include/mythical/charge_transport/: boundarysettings.hpp  cubic_lattice.hpp  cuboid_lattice.hpp  lattice.hpp  marcus.hpp
CoarseGrainSites/scripts/: test_performance_toy.bash
CoarseGrainSites/src/libkmccoarsegrain/: identity.hpp  kmc_basin_explorer.cpp  kmc_basin_explorer.hpp  kmc_cluster.cpp  kmc_cluster.hpp  kmc_cluster_container.cpp  kmc_cluster_container.hpp  kmc_coarsegrainsystem.cpp  kmc_crude.cpp  kmc_dynamic_topology.cpp  kmc_dynamic_topology.hpp  kmc_graph_library_adapter.cpp  kmc_graph_library_adapter.hpp  kmc_queue.cpp  kmc_rate_container.cpp  kmc_rate_container.hpp  kmc_site_container.cpp  kmc_site_container.hpp  kmc_walker.cpp  log.hpp
CoarseGrainSites/src/libmythical/: basin_explorer.cpp  basin_explorer.hpp  cluster_container.cpp  cluster_container.hpp  coarsegrainsystem.cpp  graph_library_adapter.cpp  graph_library_adapter.hpp  identity.hpp  log.hpp  queue.cpp  rate_container.cpp  rate_container.hpp  site_container.cpp  site_container.hpp  walker.cpp
CoarseGrainSites/src/tests/performance/: CMakeLists.txt  test_coarsegrain_cluster_vs_nocluster.cpp  test_coarsegrain_cluster_vs_nocluster_toy.cpp  test_crude_vs_coarsegrain.cpp  test_crude_vs_coarsegrain_correlated.cpp  test_crude_vs_coarsegrain_correlated_tof.cpp  test_crude_vs_coarsegrain_tof.cpp  test_kmc_coarsegrainsystem.cpp  test_script_compare_cluster_vs_nocluster.sh  test_script_crude_vs_coarse.sh
CoarseGrainSites/src/tests/regression/: CMakeLists.txt  test_1Dsystem.cpp  test_ToF.cpp
CoarseGrainSites/src/tests/unit/: CMakeLists.txt  catch_main.cpp  test_basin_explorer.cpp  test_cluster.cpp  test_cluster_container.cpp  test_coarsegrainsystem.cpp  test_coarsegrainsystem2.cpp  test_cubic_lattice.cpp  test_cuboid_lattice.cpp  test_graph_library_adapter.cpp  test_identity.cpp  test_kmc_basin_explorer.cpp  test_kmc_cluster.cpp  test_kmc_cluster_container.cpp  test_kmc_coarsegrainsystem.cpp  test_kmc_coarsegrainsystem2.cpp  test_kmc_graph_library_adapter.cpp  test_kmc_queue.cpp  test_kmc_rate_container.cpp  test_kmc_site.cpp  test_kmc_site_container.cpp  test_kmc_walker.cpp  test_queue.cpp  test_rate_container.cpp  test_site.cpp  test_site_container.cpp  test_walker.cpp
CourseGrainSites/doc/: DEVELOPERS_GUIDE.md
CourseGrainSites/include/kmccoursegrain/: kmc_constants.hpp  kmc_coursegrainsystem.hpp  kmc_particle.hpp  kmc_walker.hpp
CourseGrainSites/src/libkmccoursegrain/: identity.hpp  kmc_basin_explorer.cpp  kmc_basin_explorer.hpp  kmc_cluster.cpp  kmc_cluster.hpp  kmc_cluster_container.cpp  kmc_particle.cpp  (+11 more)
CourseGrainSites/src/tests/: CMakeLists.txt  test_identity.cpp  test_kmc_cluster.cpp  test_kmc_coursegrainsystem.cpp
CourseGrainSites/src/tests/performance/: CMakeLists.txt  test_coursegrain_cluster_vs_nocluster.cpp  test_crude_vs_coursegrain.cpp  test_crude_vs_coursegrain2.cpp  test_crude_vs_coursegrain_correlated.cpp  test_kmc_coursegrainsystem.cpp  test_script_compare_cluster_vs_nocluster.sh  test_script_crude_vs_course.sh
CourseGrainSites/src/tests/regression/: CMakeLists.txt  test_1Dsystem.cpp  test_ToF.cpp  test_regression_script.sh
CourseGrainSites/src/tests/unit/: CMakeLists.txt  test_identity.cpp  test_kmc_basin_explorer.cpp  test_kmc_cluster.cpp  test_kmc_cluster_container.cpp  test_kmc_coursegrainsystem.cpp  test_kmc_coursegrainsystem2.cpp  test_kmc_graph_library_adapter.cpp  test_kmc_particle.cpp  test_kmc_rate_container.cpp  test_kmc_site.cpp  test_kmc_site_container.cpp  test_kmc_walker.cpp
UGLY/: .travis.yml  CMakeLists.txt  README.md
UGLY/include/ugly/: constants.hpp  edge_directed.hpp  edge_directed_weighted.hpp  edge_undirected.hpp  edge_weighted.hpp  graph.hpp  graph_algorithms.hpp  graph_node.hpp
UGLY/src/libugly/: reference_wrapper_suplement.hpp  weak_pointer_supplement.hpp
UGLY/src/libugly/edge/: edge.cpp  edge.hpp  edge_directed.cpp  edge_directed_weighted.cpp  edge_undirected.cpp  edge_weighted.cpp
UGLY/src/libugly/graphvisitor/: graphvisitor.cpp  graphvisitor.hpp  graphvisitor_depth_first.cpp  graphvisitor_depth_first.hpp
UGLY/src/tests/: CMakeLists.txt  test_edge_directed.cpp  test_edge_directed_weighted.cpp  test_edge_undirected.cpp  test_edge_weighted.cpp  test_graph.cpp  test_graph_algorithm.cpp  test_graph_node.cpp  test_graphvisitor.cpp  test_graphvisitor_depth_first.cpp
cmake/: CodeCov.cmake  InstallCatch2.cmake  MythiCaLConfig.cmake  MythiCaLInstall.cmake
doc/: DEVELOPERS_GUIDE.md
examples/: example1.cpp
examples/1D_hopping/: 1D_example  1D_example.cpp  CMakeLists.txt
examples/ToF/: CMakeLists.txt  ToF_example.cpp
examples/ToF/scripts/: plot_current_transient.py
examples/version/: CMakeLists.txt  example.cpp
include/kmccoursegrain/: cluster.hpp  coursegrainsystem.hpp  identity.hpp  kmc_constants.hpp  kmc_coursegrainsystem.hpp  kmc_particle.hpp  log.hpp  particle.hpp  site.hpp
scripts/: combine_coverage.sh
src/: CMakeLists.txt
src/libkmccoursegrain/: CMakeLists.txt  cluster.cpp  cluster.hpp  coursegrainsystem.cpp  kmc_cluster.cpp  kmc_cluster.hpp  kmc_coursegrainsystem.cpp  kmc_particle.cpp  kmc_site.cpp  kmc_site.hpp  log.hpp  particle.cpp  site.cpp  site.hpp
src/tests/: CMakeLists.txt  test_cluster.cpp  test_coursegrainsystem.cpp  test_identity.cpp  test_kmc_cluster.cpp  test_kmc_coursegrainsystem.cpp  test_kmc_particle.cpp  test_kmc_site.cpp  test_particle.cpp  test_site.cpp
(+23 files in other folders)
